# lshw-tui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: action.rs  app.rs  debug.rs  dispatcher.rs  event.rs  handler.rs  main.rs  state.rs  tui.rs  ui.rs
src/core/: lshw.rs  mod.rs  types.rs
src/widgets/: details.rs  tree.rs
