[package]
name = "lshw-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", features = ["full"] }
color-eyre = "0.6.4"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "5.0.1"
eyre = "0.6.12"
futures = "0.3.31"
ratatui = "0.29.0"
thiserror = "2.0.12"
tokio-stream = "0.1.17"
tui-textarea = "0.7.0"
clap = { version = "4.5.54", features = ["derive"] }
tui-tree-widget = "0.23.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "time"] }
time = { version = "0.3.36", features = ["macros"] }
